Updated socketio to use CDN

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,7 +13,7 @@ block content
       p(id="audioData") false
       
       script(src="http://code.jquery.com/jquery-1.11.1.js")
-      script(src="http://localhost:3000/socket.io/socket.io.js")
+      script(src="https://cdn.socket.io/socket.io-1.0.0.js")
       script.
         console.log('Initializing socket.io')
         var socket = io();
