--- a/views/index.jade
+++ b/views/index.jade
@@ -36,6 +36,7 @@ block content
               return;
             }
             notifications[title] = new Notification(title, options);
+            notifications[title].onclose = function() { notifications[title] = null; }
           } else {
             Notification.requestPermission(function (permission) {
               // If the user accepts, let's create a notification
@@ -44,6 +45,7 @@ block content
                   return;
                 }
                 notifications[title] = new Notification(title, options);
+                notifications[title].onclose = function() { notifications[title] = null; }
               }
             });
           }
