--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ block content
       h2 Motion Triggered
       p(id="videoData") false
       h2 Audio Triggered
-      p(id="audioData") falseatom
+      p(id="audioData") false
       
       script(src="http://code.jquery.com/jquery-1.11.1.js")
       script(src="https://cdn.socket.io/socket.io-1.0.0.js")
